Bug 559514 - Cleanup codebase
Move away of deprecated Double constructor.

Change-Id: I19195f8f90c56cbaaa30429741307e7038bb407e
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>